syntax = "proto3";

package raft;

option go_package = "github.com/Zhima-Mochi/raft-kv-store/proto";

service Raft {
  rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
  rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
}

// AppendEntries RPC
message AppendEntriesRequest {
  int32 term = 1;
  string leaderId = 2;
  repeated LogEntry entries = 3;
  int32 prevLogIndex = 4;
  int32 prevLogTerm = 5;
  int32 leaderCommit = 6;
}

message AppendEntriesResponse {
  int32 term = 1;
  bool success = 2;
}

// RequestVote RPC
message RequestVoteRequest {
  int32 term = 1;
  string candidateId = 2;
  int32 lastLogIndex = 3;
  int32 lastLogTerm = 4;
}

message RequestVoteResponse {
  int32 term = 1;
  bool voteGranted = 2;
}

message LogEntry {
  int32 index = 1;
  int32 term = 2;
  string command = 3;
}

message HeartbeatRequest {
  int32 term = 1;
}

message HeartbeatResponse {
  int32 term = 1;
}